<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_monster"
            android:title="@string/menu_monster" />
        <item
            android:id="@+id/nav_unit"
            android:title="@string/menu_unit" />
        <item
            android:id="@+id/nav_building"
            android:title="@string/menu_building" />
        <item
            android:id="@+id/nav_build_army"
            android:title="@string/menu_build_army" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>
    <!--            android:icon="@drawable/ic_menu_camera"
                    android:icon="@drawable/ic_menu_gallery"
                    android:icon="@drawable/ic_menu_slideshow"-->

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
